maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:28: error: illegal start of simple expression
    right(;);
          ^PledgeMaze:28: error: illegal start of statement
    right(;);
           ^